# secure-walkie-talkie

./: .gitignore  README.md  requirements.txt
cpp/: Makefile  README.md  packets.json
cpp/config/: Eugene.json  Eunice.json
cpp/inc/: audio.h  bigint.h  client.h  protocol.h  server.h  util.h
cpp/src/: audio.cpp  bigint.cpp  client.cpp  listener.cpp  protocol.cpp  server.cpp  sha3.cpp  talker.cpp
interop/: README.txt  file-listener.py  file-talker.py  interop.json  lout.txt  lvars.json  test.sh  test_vectors.json  tout.txt  tvars.json
interop/python/: test.py
python/: README.txt  SOCKSClient.py  SOCKSServer.py  interop.py  main.py  run_listen.sh  run_socksproxy.sh  run_sockstalk.sh  run_tcptalk.sh
python/config/: Alice.encrypted  Alice.json  Bob.encrypted  Bob.json
python/src/: Audio.py  CounterMode.py  DHKE.py  ECDHKE.py  EllipticCurve.py  FileListener.py  FileTalker.py  Listener.py  RSA.py  SHA3.py  SOCKSTalker.py  Simon.py  Talker.py  TcpListener.py  TcpTalker.py  UtilityBit.py  UtilityConfig.py  UtilityFile.py  UtilityNum.py  UtilityProtocol.py  UtilityTransforms.py
python/tests/: AudioTest.py  CounterModeTest.py  DHKETest.py  ECDHKETest.py  EllipticCurveTest.py  RSATest.py  SHA3Test.py  SimonTest.py  UtilityBitTest.py  UtilityConfigTest.py  UtilityNumTest.py  UtilityProtocolTest.py
rust/: Cargo.toml  README.md
rust/src/: listener.rs  protocol.rs  rsa.rs  talker.rs
test-vectors/: test.sh
testing/: interop.json  interop.txt
