[package]
name = "walkie-talkie"
version = "0.1.0"
authors = ["Eugene Chou <euchou@ucsc.edu>"]
edition = "2018"

[dependencies]
base64 = "0.12.3"
num-bigint-dig = "0.6.0"
rand = "0.7.3"
serde_json = "1.0"
sha3 = "0.9.1"
structopt = "0.3.15"

[[bin]]
name = "talker"
path = "src/talker.rs"

[[bin]]
name = "listener"
path = "src/listener.rs"
